@@ -99,7 +99,7 @@ LIBGCRYPT_VER=1.5.3
 OPENSSL_VER=1.0.1u
 OPENSSL_SUBVER=1.0.1
 
-# HARFBUZZ_VER=0.9.27
+HARFBUZZ_VER=0.9.27
 # FREETYPE_VER=2.5.2
 FREETYPE_VER=2.5.0
 FONTCONFIG_VER=2.11.0
