@@ -103,7 +103,7 @@ LIBGCRYPT_VER=1.8.1
 OPENSSL_VER=1.0.2m
 OPENSSL_SUBVER=1.0.2
 
-# HARFBUZZ_VER=0.9.27
+HARFBUZZ_VER=1.7.1
 # FREETYPE_VER=2.5.2
 FREETYPE_VER=2.8
 FONTCONFIG_VER=2.12.3
