@@ -1,0 +1,18 @@
+#!/bin/sh
+
+[ -z "${HARFBUZZ_VER}" ] && exit 1
+
+(
+    PKG=harfbuzz
+    PKG_VERSION=${HARFBUZZ_VER}
+    PKG_SUBDIR=${PKG}-${PKG_VERSION}
+    PKG_FILE=${PKG}-${PKG_VERSION}.tar.bz2
+    PKG_URL="https://www.freedesktop.org/software/${PKG}/release/${PKG_FILE}"
+    PKG_DEPS="gcc"
+
+    if ! IsPkgInstalled
+    then
+        ProcessStandardAutotoolsProject
+    fi
+)
+
